kubernetes-deployment/api-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: chatapp
  name: chatapp-api
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: chatapp-api
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: chatapp-api
    spec:
      containers:
      - image: megakuul/chatapp:api
        imagePullPolicy: Always
        name: chatapp-api
        resources:
          requests:
            cpu: "30m"
            memory: "100Mi"
          limits:
            cpu: "50m"
            memory: "150Mi"
---
apiVersion: v1
kind: Service
metadata:
  namespace: chatapp
  name: chatapp-api-svc
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: chatapp-api
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: chatapp
  name: chatapp-api-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/certificate-arn: <cert arn>
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-2016-08
spec:
  ingressClassName: alb
  rules:
    - host: <api domain>
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: chatapp-api-svc
              port:
                number: 80
